# lxplug-network

./: README  config.h.in  configure.ac
data/: Makefile.am  lxplug-network.ui
debian/: changelog  control  copyright
plugins/: Makefile.am  Makefile.in
plugins/dhcpcd-gtk/: dhcpcd-gtk.h  main.c  menu.c  prefs.c  queue.h  wpa.c
plugins/libdhcpcd/: config.c  dhcpcd.c  dhcpcd.h  wpa.c
po/: POTFILES.in  en_GB.po  hy.po  is.po  it.po  ko.po  nb.po  sk.po
